--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   auto_size_text: ^3.0.0
   carousel_slider: ^5.0.0
   url_launcher: ^6.3.1
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
